# rust-training

./: .gitignore  Cargo.toml  README.md
hello_macro_derive/: .gitignore  Cargo.toml
src/: advanced_traits.rs  arc.rs  box_error.rs  boxing.rs  closures.rs  custom_error.rs  drop.rs  dynamic.rs  envvars.rs  error_chain_test.rs  failure_test.rs  fibonacci.rs  functions.rs  generics.rs  hashmaps.rs  hello_macro.rs  input.rs  iterator.rs  iterators.rs  iterators2.rs  json.rs  lib.rs  lifetime.rs  linkedlist.rs  macros.rs  main.rs  match_ref.rs  mock.rs  monty_hall.rs  mutex.rs  myrand.rs  oop.rs  ownership.rs  panic.rs  quick_error_test.rs  rands.rs  reference_cycle.rs  result_option.rs  samples.rs  smart_pointers.rs  (+6 more)
src/io/: mod.rs  read.rs
src/oop/: blog.rs
src/samples/: generics.rs  hashmaps.rs  iterators.rs  panic.rs  rands.rs  some.rs  vec.rs
src/samples/closures/: mod.rs
