[package]
name = "rust-training"
version = "0.1.0"
authors = ["Farzad FARID <farzy@farzy.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
rand_chacha = "0.2"
quick-error = "1.2.3"
error-chain = "0.12.2"
backtrace = "0.3.46"
failure = "0.1.7"
failure_derive = "0.1.7"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
